apps/html-site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deel-test-application-deel-test
  namespace: deel-test
  labels:
    app: deel-test-application-deel-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gabriel-buka.captaingab.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deel-test-application-deel-test
            port:
              number: 80
